--- a/www/index.html
+++ b/www/index.html
@@ -123,9 +123,9 @@
 	// Initialize application
 	//
 	function initApp() {
-		myNavigator.geolocation.getCurrentPosition(onGeoLocationSuccess, onGeoLocationError);
+		navigator.geolocation.getCurrentPosition(onGeoLocationSuccess, onGeoLocationError);
         var options = {  maximumAge: 250, timeout: 5000, enableHighAccuracy: true };
-        watchID = myNavigator.geolocation.watchPosition(onGeoLocationSuccess, onGeoLocationError, options);
+        watchID = navigator.geolocation.watchPosition(onGeoLocationSuccess, onGeoLocationError, options);
 		//window.plugins.insomnia.keepAwake();
 		updateConsole("[INIT] geoLocation");
 	}	
