--- a/www/index.html
+++ b/www/index.html
@@ -273,7 +273,7 @@
 		lastPosition = position;
 		if (activePage == 'location') { loadLocation(); };
 		watchUpdate += 1;
-		doHttpGetCall(position, watchUpdate - 1);
+		//doHttpGetCall(position, watchUpdate - 1);
 		updateConsole("[OK] geoLocation - point " + watchUpdate);
     }
 	
